--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ ul {
 h1 {
   color: rgba(21, 137, 75, 0.792);
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  margin-left: 80px;
   margin-top: 30px;
-  font-size: 60px;
+  font-size: 40px;
+  text-align: center;
 }
