--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -2,10 +2,10 @@
   padding: 10px;
   margin-top: 30px;
   width: 300px;
-  border: 1px solid rgba(21, 139, 76, 0.792);
   border-radius: 4px;
   display: flex;
   justify-content: space-between;
+  background-color: rgb(43, 44, 45);
 }
 
 .userWrapper {
@@ -16,6 +16,7 @@
 .text {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   letter-spacing: 0.05em;
+  color: aliceblue;
 }
 
 .span {
@@ -24,19 +25,16 @@
 
 .button {
   border: none;
-  color: aliceblue;
+  color: white;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   letter-spacing: 0.05em;
-  background-color: rgba(28, 181, 100, 0.792);
+  background-color: rgba(0, 255, 255, 0.633);
   border-radius: 4px;
   margin-top: 10px;
   width: 80px;
   height: 30px;
 }
 .button:hover {
-  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
-    rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
-    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
-    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
-    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  color: rgba(0, 0, 0, 0.444);
+  background-color: aqua;
 }
