--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -1,34 +1,16 @@
 .wrapper {
-  margin-left: 40px;
-  margin-top: 30px;
-  padding: 16px;
-  width: 350px;
+  width: 300px;
+  height: 360px;
+  background-color: aliceblue;
+  margin: 0 auto;
+  margin-top: 50px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
     rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
   background-color: rgb(43, 44, 45);
   border-radius: 6px;
-}
-
-.form {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  margin-top: 20px;
-}
-
-.text {
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  color: white;
-  letter-spacing: 0.05em;
-}
-
-.input {
-  border: none;
-  border-radius: 4px;
-  background-color: aliceblue;
-  display: flex;
-  width: 250px;
-  height: 30px;
 }
 
 .button {
@@ -48,8 +30,28 @@
   background-color: aqua;
 }
 
-.error {
-  color: rgb(228, 90, 10);
+.form {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.input {
+  width: 180px;
+  height: 26px;
+  border-radius: 4px;
+  border: none;
+}
+
+.text {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  letter-spacing: 0.05em;
+  color: aliceblue;
+}
+
+.link {
+  padding-left: 5px;
+  text-decoration: none;
+  color: rgba(0, 255, 255, 0.633);
+  font-size: 18px;
 }
