--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -15,8 +15,8 @@
 .input {
   border: none;
   border-radius: 4px;
-  background-color: rgb(246, 240, 232);
-  border: 1px solid rgba(21, 139, 76, 0.792);
+  background-color: aliceblue;
+
   width: 350px;
   height: 40px;
 }
